<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:replace="android:supportsRtl"
    android:layout_marginTop="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

       >
    <company.tap.cardinputwidget.views.CardBrandView
        android:id="@+id/card_brand_view"
        android:layout_width="30dp"
        android:layout_height="22dp"

        android:visibility="visible"
       android:layout_marginLeft="10dp"

        android:layout_gravity="center"


        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="5dp"
        android:layout_gravity="center"

        >

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_number_text_input_layout"
            style="@style/Tap.CardInputWidget.TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|end"
            android:accessibilityLiveRegion="polite"
            android:accessibilityTraversalBefore="@+id/text_input_expiry_date"
            android:background="@android:color/transparent"
            android:contentDescription="@string/acc_label_card_number"
            android:labelFor="@id/card_number_edit_text"
            android:nextFocusRight="@+id/text_input_expiry_date"
            android:nextFocusDown="@+id/text_input_expiry_date"
            android:nextFocusForward="@+id/text_input_expiry_date"
            android:visibility="visible"
            app:hintEnabled="false"
            android:layoutDirection="locale"
            android:layout_marginLeft="@dimen/margin_basic_3dp"
            android:gravity="start|end"

            tools:ignore="UnusedAttribute">

            <company.tap.cardinputwidget.views.CardNumberEditText
                android:id="@+id/card_number_edit_text"
                style="@style/Tap.CardInputWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:nextFocusRight="@+id/expiry_date_text_input_layout"
                android:hint="@string/card_number_hint"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                android:layout_gravity="start|end"
                android:textDirection="firstStrongLtr"
                android:textAlignment="viewStart"
                android:gravity="start|end"
                android:maxLength="19" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiry_date_text_input_layout"
            style="@style/Tap.CardInputWidget.TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="160dp"
            android:accessibilityLiveRegion="polite"
            android:accessibilityTraversalAfter="@+id/text_input_card_number"
            android:accessibilityTraversalBefore="@+id/text_input_cvc"
            android:background="@android:color/transparent"
            android:contentDescription="@string/acc_label_expiry_date"
            android:labelFor="@id/expiry_date_edit_text"
            android:nextFocusLeft="@id/text_input_card_number"
            android:nextFocusRight="@+id/text_input_cvc"
            android:nextFocusUp="@id/text_input_card_number"
            android:nextFocusDown="@+id/text_input_cvc"
            android:nextFocusForward="@+id/text_input_cvc"
            android:visibility="visible"
            app:hintEnabled="false"
            android:gravity="start|end"
            android:imeOptions="actionNext"
            tools:ignore="UnusedAttribute">

            <company.tap.cardinputwidget.views.ExpiryDateEditText
                android:id="@+id/expiry_date_edit_text"
                style="@style/Tap.CardInputWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-light"
                android:gravity="start|end"
                android:hint="@string/expiry_date_hint"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLength="5"
                android:textDirection="locale" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cvc_text_input_layout"
            style="@style/Tap.CardInputWidget.TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|end"
            android:layout_marginStart="230dp"
            android:accessibilityLiveRegion="polite"
            android:accessibilityTraversalAfter="@+id/text_input_expiry_date"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cvc_number_hint"
            android:labelFor="@id/cvc_edit_text"
            android:nextFocusLeft="@id/text_input_expiry_date"
            android:nextFocusUp="@id/text_input_expiry_date"
            android:nextFocusDown="@id/holder_name_edit_text"
            android:nextFocusRight="@id/holder_name_edit_text"
            app:hintEnabled="false"
            android:visibility="visible"
            android:gravity="start|end"
            tools:ignore="UnusedAttribute">

            <company.tap.cardinputwidget.views.CvcEditText
                android:id="@+id/cvc_edit_text"
                style="@style/Tap.CardInputWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:textDirection="locale"
                android:contentDescription="@string/acc_label_cvc_node"
                android:background="@android:color/transparent"
                android:layout_gravity="start|end"
                android:gravity="start|end"
                android:inputType="numberPassword"
                android:hint="CVV"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <company.tap.tapuilibrary.uikit.views.TapAlertView
        android:id="@+id/alertView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <company.tap.tapuilibrary.uikit.atoms.TapSeparatorView
        android:layout_marginTop="@dimen/activity_total_margin10"
        android:id="@+id/separator_1"
        android:layout_width="wrap_content"
        android:layout_height="0.2dp"
        android:visibility="gone"
        android:background="@color/light_gray" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/holder_name_text_input_layout"
        style="@style/Tap.CardInputWidget.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/margin_basic_10dp"
        android:contentDescription="@string/acc_label_holder_name"
        android:labelFor="@id/holder_name_edit_text"
        android:visibility="gone"
        app:hintEnabled="false"
        tools:ignore="UnusedAttribute"
        tools:replace="android:supportsRtl">

        <company.tap.cardinputwidget.views.HolderNameEditText
            android:id="@+id/holder_name_edit_text"
            style="@style/Tap.CardInputWidget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:fontFamily="sans-serif-light"
            android:imeOptions="actionDone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textDirection="locale"/>

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</LinearLayout>
